# makeapp

./: .coveragerc  .landscape.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: 010_quickstart.md  020_userconf.md  030_skeletons.md  040_development.md  050_tests.md  Makefile  index.md
docs/source/: conf.py  index.rst  quickstart.rst  rst_guide.rst  skeletons.rst  userconf.rst
makeapp/: __init__.py  appconfig.py  appmaker.py  apptemplate.py  apptools.py  cli.py  exceptions.py  projector.py  rendering.py  utils.py
makeapp/app_templates/__default__/: .coveragerc  AUTHORS  CHANGELOG  INSTALL  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
makeapp/app_templates/__default__/__module_name__/: __init__.py
makeapp/app_templates/__default__/docs/: Makefile  requirements.txt
makeapp/app_templates/__default__/docs/source/: conf.py  index.rst  rst_guide.rst
makeapp/app_templates/__default__/tests/: runtests.py
makeapp/app_templates/click/: makeappconf.py  setup.py
makeapp/app_templates/click/__module_name__/: cli.py
makeapp/app_templates/console/: setup.py
makeapp/app_templates/console/__module_name__/: __init__.py  cli.py
makeapp/app_templates/django/: .coveragerc  .travis.yml  MANIFEST.in  makeappconf.py  setup.py  tox.ini
makeapp/app_templates/django/.github/workflows/: python-package.yml
makeapp/app_templates/django/__module_name__/: __init__.py  admin.py  config.py  models.py  runtests.py  tests.py  views.py
makeapp/app_templates/django/__module_name__/tests/: models.py  tests_basic.py  urls.py
makeapp/app_templates/pytest/: setup.cfg  setup.py
makeapp/app_templates/pytest/tests/: test_module.py
makeapp/app_templates/pytestplugin/: makeappconf.py
makeapp/app_templates/pytestplugin/__module_name__/: entry.py
makeapp/app_templates/pytestplugin/tests/: test_module.py
makeapp/app_templates/webscaff/: .gitignore  .hgignore  makeappconf.py  requirements.txt  setup.py  wscaff.yml
makeapp/app_templates/webscaff/__module_name__/: uwsgicfg.py
makeapp/app_templates/webscaff/__module_name__/core/: uwsgiinit.py
makeapp/app_templates/webscaff/__module_name__/settings/: auto.py  base.py  env_development.py  env_testing.py  settings.py  settings_development.py  settings_testing.py  sub_paths.py
makeapp/app_templates/webscaff/conf/: __module_name__-certbot-hook.sh  __module_name__.service  django.py  env_production.py  settings_production.py
makeapp/app_templates/webscaff/tests/: conftest.py  requirements.txt
makeapp/helpers/: dist.py  files.py  vcs.py  venvs.py
makeapp/license_templates/: apache2_src  bsd2cl  bsd3cl  gpl2  gpl2_src  mit  no_src
src/makeapp/: __init__.py  appconfig.py  appmaker.py  apptemplate.py  apptools.py  cli.py  exceptions.py  rendering.py  utils.py
src/makeapp/app_templates/__default__/: .coveragerc  .gitignore  .hgignore  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL.md  README.md  mkdocs.yml  pyproject.toml  ruff.toml  setup.py  tox.ini
src/makeapp/app_templates/__default__/.github/workflows/: python-package.yml
src/makeapp/app_templates/__default__/__module_name__/: __init__.py
src/makeapp/app_templates/__default__/docs/: index.md  quickstart.md
src/makeapp/app_templates/__default__/docs/source/: conf.py  index.md  index.rst
src/makeapp/app_templates/__default__/src/__package_name__/: __init__.py
src/makeapp/app_templates/__default__/tests/: __init__.py
src/makeapp/app_templates/click/: pyproject.toml  setup.py
src/makeapp/app_templates/click/__module_name__/: cli.py
src/makeapp/app_templates/click/src/__package_name__/: cli.py
src/makeapp/app_templates/console/: pyproject.toml  setup.py
src/makeapp/app_templates/console/src/__package_name__/: cli.py
src/makeapp/app_templates/django/: .coveragerc  makeappconf.py  pyproject.toml  setup.py  tox.ini
src/makeapp/app_templates/django/.github/workflows/: python-package.yml
src/makeapp/app_templates/django/__module_name__/: __init__.py  views.py
src/makeapp/app_templates/django/src/__package_name__/: admin.py  apps.py  models.py  views.py
src/makeapp/app_templates/pytest/: setup.cfg  setup.py
src/makeapp/app_templates/pytest/tests/: test_module.py
src/makeapp/app_templates/pytestplugin/: pyproject.toml  setup.py
src/makeapp/app_templates/webscaff/: .gitignore  makeappconf.py  pyproject.toml  requirements.txt  setup.py  wscaff.yml
src/makeapp/app_templates/webscaff/__module_name__/settings/: auto.py  env_development.py
src/makeapp/app_templates/webscaff/src/__package_name__/: uwsgicfg.py
src/makeapp/app_templates/webscaff/src/__package_name__/core/: uwsgiinit.py
src/makeapp/app_templates/webscaff/src/__package_name__/settings/: auto.py  env_testing.py  sub_paths.py
src/makeapp/app_templates/webscaff/tests/: conftest.py  requirements.txt  test_module.py
src/makeapp/helpers/: dist.py  files.py  tests.py  vcs.py  venvs.py
src/makeapp/license_templates/: bsd3cl  gpl3_src
tests/: conftest.py  test_appmaker.py  test_apptools.py  test_cli.py  test_helpers.py  tests.py
tests/datafixtures/: github_matrix.yml
tests/templates/: test_click.py  test_console.py  test_django.py  test_pytest_plugin.py
tools/: devboot.sh
