[project]
name = "makeapp"
dynamic = ["version"]
description = "Simplifies routine Python application development processes."
authors = [
    { name = "Igor Starikov", email = "idlesign@yandex.ru" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["scaffolding", "development"]
dependencies = [
    "requests",
    "click",
    "jinja2~=3.1",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/idlesign/makeapp"
Documentation = "https://makeapp.readthedocs.io/"

[project.scripts]
makeapp = "makeapp.cli:main"
ma = "makeapp.cli:main"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "linters"},
    {include-group = "tests"},
]
docs = [
    "mkdocs-material",
    "mkdocs-navsorted-plugin",
]
linters = [
]
tests = [
    "pytest",
    "pytest-datafixtures",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/makeapp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/makeapp"]

[tool.hatch.build.targets.sdist]
packages = ["src/"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "src/",
]
omit = [
    "*/app_templates/*",
    "*/license_templates/*",
    "*/cli.py",
]

[tool.coverage.report]
fail_under = 90.00
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

